@@ -5,6 +5,11 @@
 
 	<!-- Configuration -->
 	<CommandClass id="112">
+		<Value type="list" genre="config" instance="1" index="1" label="Input 1 switch type" size="1" min="0" max="1" value="1">
+			<Help/>
+			<Item label="Mono-stable switch type (push button)" value="0" />
+			<Item label="Bi-stable switch type" value="1" />
+		</Value>
 
 		<Value type="list" genre="config" instance="1" index="2" label="Input 2 contact type" size="1" min="0" max="1" value="0">
 			<Help>Default value 0.</Help>
